--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   "homepage": "https://github.com/bbbily/harryRazors#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cor": "0.0.0",
+    "cors": "^2.8.1",
     "css-loader": "^0.27.1",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "massive": "^2.6.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "style-loader": "^0.13.2"
   },
   "devDependencies": {
