--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/bbbily/harryRazors#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
     "cor": "0.0.0",
     "cors": "^2.8.1",
@@ -26,6 +27,7 @@
     "massive": "^2.6.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "style-loader": "^0.13.2"
   },
   "devDependencies": {
