save user when refresh

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
+    "stripe": "^4.15.1",
+    "stripe.js": "0.0.1",
     "style-loader": "^0.13.2"
   },
   "devDependencies": {
